--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+url: http://adam-dev-blog.heroku.com
+title: Adam's Dev Blog
+subtitle: Adventures in Front End Development
+author: Adam Krone
 simple_search: http://google.com/search
 description:
 
